Project

General

Profile

Actions

Bug #18887

closed

IPv6 Heartbeat packets are not marked with DSCP QoS - simple messenger

Added by Robin Johnson about 7 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
jewel
Regression:
No
Severity:
2 - major
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

osd_heartbeat_use_min_delay_socket is being ignored for IPv6.


Related issues 2 (0 open2 closed)

Copied to Ceph - Bug #18928: IPv6 Heartbeat packets are not marked with DSCP QoS - async messengerResolved02/11/2017

Actions
Copied to Ceph - Backport #18958: jewel: IPv6 Heartbeat packets are not marked with DSCP QoS - simple messengerResolvedRobin JohnsonActions
Actions #1

Updated by Robin Johnson about 7 years ago

  • Subject changed from IPv6 Heartbeat packets are not marked with DSCP QoS to IPv6 Heartbeat packets are not marked with DSCP QoS - simple messenger
Actions #2

Updated by Robin Johnson about 7 years ago

  • Copied to Bug #18928: IPv6 Heartbeat packets are not marked with DSCP QoS - async messenger added
Actions #3

Updated by Kefu Chai about 7 years ago

  • Status changed from New to Pending Backport
Actions #4

Updated by Loïc Dachary about 7 years ago

  • Copied to Backport #18958: jewel: IPv6 Heartbeat packets are not marked with DSCP QoS - simple messenger added
Actions #5

Updated by Yuri Weinstein about 7 years ago

https://github.com/ceph/ceph/pull/13418 merged (async messenger fix)

Actions #6

Updated by Nathan Cutler over 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF