msg/simple/Pipe: support IPv6 QoS.

Extend DSCP marking for heartbeat packets to IPv6, as commit
9b9a682fe035c985e416ee1c112fa58f9045a27c only implemented
support for IPv4.

Conflicts: Cherry-picked 91a29bc490fdfbbef0875fa620c7ba1a1a6492ae from master to avoid conflict.
Backport: jewel, luminious
Fixes: http://tracker.ceph.com/issues/18887
Signed-off-by: Robin H. Johnson <robin.johnson@dreamhost.com>
(cherry picked from commit 2d6021fbf7a728f73c2998be17e9224f14b83a30)